make changes part 2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kitchen Sink</title>
+    <title>Mein hu Sanskari</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -17,16 +17,6 @@
     <link rel="dx-template" type="text/html" href="layouts/Empty/EmptyLayout.html" />
     <link rel="dx-template" type="text/html" href="views/Home.html"/>
     <link rel="stylesheet" type="text/css" href="views/Home.css"/>
-    <link rel="dx-template" type="text/html" href="views/IconSet.html" />
-    <link rel="stylesheet" type="text/css" href="views/IconSet.css" />
-    <link rel="dx-template" type="text/html" href="views/Form.html" />
-    <link rel="stylesheet" type="text/css" href="views/Form.css" />
-    <link rel="dx-template" type="text/html" href="views/Overlays.html"/>
-    <link rel="stylesheet" type="text/css" href="views/Overlays.css"/>
-    <link rel="dx-template" type="text/html" href="views/Lists.html" />
-    <link rel="stylesheet" type="text/css" href="views/Lists.css" />
-    <link rel="dx-template" type="text/html" href="views/Maps.html" />
-    <link rel="stylesheet" type="text/css" href="views/Maps.css" />
     <link rel="dx-template" type="text/html" href="views/Gallery.html"/>
     <link rel="stylesheet" type="text/css" href="views/Gallery.css"/>
     <link rel="dx-template" type="text/html" href="views/Navigation.html"/>
@@ -44,12 +34,7 @@
     <script type="text/javascript" src="layouts/SlideOut/SlideOutLayout.js"></script>
     <script type="text/javascript" src="layouts/Empty/EmptyLayout.js"></script>
     <script type="text/javascript" src="views/Home.js"></script>
-    <script type="text/javascript" src="views/IconSet.js"></script>
-    <script type="text/javascript" src="views/Form.js"></script>
-    <script type="text/javascript" src="views/Overlays.js"></script>
-    <script type="text/javascript" src="views/Lists.js"></script>
     <script type="text/javascript" src="views/Gallery.js"></script>
-    <script type="text/javascript" src="views/Maps.js"></script>
     <script type="text/javascript" src="views/Navigation.js"></script>
     <script type="text/javascript">
         $(function() {
